--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@
   width: 100%;
   padding: 2em;
   padding-bottom: 1em;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 .navbar__tags {
   margin-left: 1em;
@@ -80,6 +82,8 @@
 .header {
   width: 100%;
   position: relative;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 .header__heading {
   position: absolute;
@@ -105,6 +109,10 @@
 .header__button:hover{
   color: #32353c;
   background-color: #fff;
+}
+.card{
+  margin: 0 auto;
+  max-width: 1440px;
 }
 .card__Section__span {
   margin: 1em;
@@ -177,6 +185,8 @@
   width: 100%;
   margin-bottom: 20em;
   display: flex;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 .placement__left {
   width: 75%;
@@ -352,11 +362,35 @@
   padding-left: 4em;
   margin-top: 1em;
 }
-/* .event__search{
-  margin-left: 2em;
-  display: inline;
-} */
+.event__search{
+  margin-top: 1em;
+}
 .input__event__search__main{
   margin-left: 3em;
 
+}
+.event__button__view{
+  background-color: #ff502d;
+  color: #fff;
+  border: none;
+  padding: 10px 2em;
+  margin-top: 1em;
+  margin-left: 1em;
+}
+.event__button__submit{
+  background-color: #32353c;
+  color: #fff;
+  border: none;
+  padding: 10px 2em;
+  margin-top: 1em;
+}
+.placement__two__heading{
+  background-color: #A8B5FF;
+  margin-top: 2em;
+  padding: 1.5em;
+  margin-left: -11em;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-size: 23px;
 }
