--- a/style.css
+++ b/style.css
@@ -394,3 +394,69 @@
   display: flex;
   font-size: 23px;
 }
+/* 2nd .navbar */
+.side_nav {
+  width: 250px;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  /* left: 82%; */
+  background: #ffeb38;
+  z-index: 3;
+
+  display: none;
+  animation: slider 1s both;
+  transition: 300ms ease-in-out;
+}
+.side_nav ul li {
+  list-style: none;
+  margin: 50px 20px;
+}
+.side_nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+@keyframes slider {
+  from {
+    right: -250px;
+  }
+  to {
+    right: 0px;
+  }
+}
+.menu_btn {
+  width: 50px;
+  height: 50px;
+  /* background: #ffeb38; */
+  text-align: center;
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  border-radius: 3px;
+  z-index: 3;
+  cursor: pointer;
+  user-select: none;
+  display: none;
+}
+.menu_btn img {
+  width: 20px;
+  margin-left: 3em;
+  margin-top: 5.7em;
+}
+
+
+@media(max-width:1360px){
+  .nav__main{
+    display: none;
+  }
+  .navbar__social__media{
+    display: none;
+  }
+  .menu_btn{
+    display: flex;
+    
+  }
+  
+}
