--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@
   margin: 0;
   padding: 0;
 }
-
 .body {
   margin: 0px;
   padding: 0px;
   font-family: "Poppins", sans-serif;
+  
+}
+All__MAin__Section{
+  overflow: hidden;
+  overflow-x: hidden;
 }
 .logo {
   width: 100%;
@@ -26,6 +30,7 @@
 .search__nav {
   margin: 1em;
   margin-left: 2em;
+  cursor: pointer;
 }
 
 .navbar {
@@ -173,13 +178,19 @@
 }
 .card__all {
   display: flex;
-  width: 96%;
+  width: 98%;
   justify-content: space-between;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
+.card__main{
+  width: 24%;
+}
+
 .card__img img {
   height: 180px;
-  width: 300px;
+  width: 100%;
+  
+  /* width: 300px; */
 }
 .placement {
   width: 100%;
@@ -400,23 +411,29 @@
   height: 100vh;
   position: absolute;
   right: 0;
-  top: 0;
+  top: 10%;
   /* left: 82%; */
-  background: #ffeb38;
+  background: #ff502d;
   z-index: 3;
-
+border-radius: 30px 0px 0px 30px;
   display: none;
   animation: slider 1s both;
   transition: 300ms ease-in-out;
 }
+.side_nav nav{
+  margin-top: 2em;
+}
 .side_nav ul li {
   list-style: none;
-  margin: 50px 20px;
+  margin: 20px 30px;
 }
 .side_nav ul li a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 18px;
+}
+.side_nav ul li a:hover{
+  color: #A8B5FF;
 }
 @keyframes slider {
   from {
@@ -441,11 +458,61 @@
   display: none;
 }
 .menu_btn img {
-  width: 20px;
-  margin-left: 3em;
-  margin-top: 5.7em;
+  /* width: 20px; */
+  /* margin-left: 3em; */
+  margin-top: 5.4em;
+  height: 25px;
+}
+.bestkids{
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1440px;
+  display: flex;
+}
+.best__left{
+  width: 52%;
+  margin-left: 2em;
+  position: relative;
+}
+.best__right{
+  width: 48%;
+}
+.bestkids__img img{
+  width: 100%;
+}
+.bestkid__heading{
+  font-size: 35px;
+  font-weight: bold;
+  margin-left: 10px;
+  position: absolute;
+  top: 5%;
+  color: #ffff;
+  width: 35%;
+}
+.bestkids__button{
+  background-color: #ff502d;
+  padding: 1em 2em;
+  border: none;
+  font-size: 15px;
+  color: white;
+  position: absolute;
+  top: 18%;
+  margin: 1em;
+}
+.spanline__bestartical{
+  margin-left: 2em;
+}
+.best__right{
+  display: flex;
+  
 }
 
+.bestartical_heading{
+  font-size: 30px;
+  margin-left: 1em;
+  color: #32353c;
+
+}
 
 @media(max-width:1360px){
   .nav__main{
@@ -459,4 +526,207 @@
     
   }
   
+}
+@media(max-width:1250px){
+
+  .header__heading {
+    width: 25%;
+  }
+  .header__img img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    position: relative;
+}
+.placement{
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+}
+.placement__img__heading{
+  left: 53%;
+}
+.placement__left {
+  width: 97%;
+}
+.all__featured__card {
+  width: 97%;
+}
+.event__card{
+  flex-wrap: wrap;
+}
+.input__event__search__main{
+  margin-left: 0;
+}
+.placement__right{
+  width: 50%;
+}
+.placement__two__heading{
+  margin-left: 0em;
+}
+.placement__button {
+  margin-right: 8.5em;
+}
+}
+@media(max-width:1000px){
+
+  .header__heading {
+    width: 26%;
+    top: 20%;
+    margin-left: 1em;
+  }
+  .header__button{
+    margin-left: 2em;
+    
+  }
+  
+  .card__main{
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 44%;
+    margin: 1em;
+  }
+}
+@media(max-width:850px){
+
+  .header__heading {
+    width: 26%;
+    top: 20%;
+    font-size: 24px;
+    margin-left: 1.5em;
+  }
+  .header__button{
+    margin-left: 2em;
+    top: 55%;
+    padding: 1em 3em;
+    
+  }
+}
+@media(max-width:850px){
+  .header__img img {
+
+    height: 350px; 
+}
+.card__all {
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.card__heading{
+  top: 37%;
+  margin-left: 10px;
+}
+.card__tips{
+  top: 90%;
+}
+.card__tips a{
+  margin-left: 10px;
+}
+.card__info{
+  margin-left: 10px;
+}
+.card__Section__span{
+  display: none;
+}
+.Featured__span{
+  display: none;
+}
+.card__Section__heading{
+  margin-left: 1em;
+}
+}
+@media(max-width:750px){
+  .all__featured__card{
+    flex-direction: column;
+    margin: 1em;
+  }
+  .Featured__card{
+    margin-bottom: 1em;
+  }
+  .event__card {
+    margin-left: 1em;
+  }
+  .Featured__heading{
+    margin-left: 1em;
+  }
+  .event__search{
+    margin-left: 1em;
+  }
+  .event_input{
+    margin-left: 1em;
+  }
+  .event__button__view{
+    margin-left: 2em;
+  }
+  .placement__right {
+    margin: 2em;
+  }
+  .newscard__info{
+    width: 150%;
+  }
+  .more__new__button {
+    margin-left: 4em;
+  }
+  .placement__two{
+    width: 100%;
+  }
+  .placement__two__heading{
+    padding: 0.5em;
+    margin-left: 1em;
+  }
+  .featured__img img{
+    width: auto;
+    height: 500px;
+  }
+  .placement__two {
+    width: 150%;
+  }
+  .Featured__card__heading {
+    top: 70%;
+  }
+.placement__img__heading {
+  font-size: 28px;
+  left: 3%;
+    width: 40%;
+  /* left: 50%; */
+}
+
+.placement__button {
+  right: 1%;
+  padding: 1em 2em;
+  top: 70%;
+}
+.placement__img img{
+  height: 300px;
+  
+}
+}
+@media(max-width:550px){
+  .card__img img {
+    height: 180px;
+    width: 100%;
+    width: 300px;
+
+}}
+@media(max-width:450px){
+  .header__img img {
+
+    height: 250px;
+ 
+}
+.header__heading{
+  font-size: 18px;
+  width: 30%;
+}
+.header__button {
+ 
+  padding: 1em 2em;
+}
+.placement__button {
+  top: 80%;
+}
+.placement__img__heading{
+  top: 60%;
+  width: 80%;
+}
 }
