--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 .body {
   margin: 0px;
   padding: 0px;
-  font-family: "Poppins", sans-serif;
-  
+
+  /* font-family: "Poppins", sans-serif; */
 }
-All__MAin__Section{
+All__MAin__Section {
   overflow: hidden;
   overflow-x: hidden;
 }
@@ -29,7 +32,7 @@ All__MAin__Section{
 }
 .search__nav {
   margin: 1em;
-  margin-left: 2em;
+  margin-left: 1em;
   cursor: pointer;
 }
 
@@ -44,16 +47,16 @@ All__MAin__Section{
   max-width: 1440px;
 }
 .navbar__tags {
-  margin-left: 1em;
+  margin-left: 9px;
 }
 .navbar__tags {
-  font-size: 16px;
+  font-size: 14px;
   text-decoration: none;
   color: #32353c;
   font-weight: 500;
 }
 .navbar__social__media {
-  margin-left: 2em;
+  margin-left: 1em;
 }
 .nav__main {
   /* margin-left: 2em; */
@@ -92,7 +95,7 @@ All__MAin__Section{
 }
 .header__heading {
   position: absolute;
-  top: 40%;
+  top: 30%;
   width: 20%;
   font-size: 30px;
   margin-left: 2em;
@@ -108,14 +111,14 @@ All__MAin__Section{
   color: white;
   padding: 1em 4em;
   cursor: pointer;
-  
-  transition: all .5s ease;
+
+  transition: all 0.5s ease;
 }
-.header__button:hover{
+.header__button:hover {
   color: #32353c;
   background-color: #fff;
 }
-.card{
+.card {
   margin: 0 auto;
   max-width: 1440px;
 }
@@ -173,7 +176,7 @@ All__MAin__Section{
   margin-left: 1.5em;
   text-decoration: none;
 }
-.card__tips a:hover{
+.card__tips a:hover {
   color: #ff502d;
 }
 .card__all {
@@ -182,14 +185,14 @@ All__MAin__Section{
   justify-content: space-between;
   /* flex-wrap: wrap; */
 }
-.card__main{
+.card__main {
   width: 24%;
 }
 
 .card__img img {
   height: 180px;
   width: 100%;
-  
+
   /* width: 300px; */
 }
 .placement {
@@ -241,10 +244,9 @@ All__MAin__Section{
   padding: 1em 4em;
   cursor: pointer;
   font-size: 15px;
-  transition: all .5s ease;
-  
+  transition: all 0.5s ease;
 }
-.placement__button:hover{
+.placement__button:hover {
   color: #32353c;
   background-color: #fff;
 }
@@ -312,32 +314,30 @@ All__MAin__Section{
 .more__new__button:hover {
   color: #ed6244;
 }
-.Featured__heading{
+.Featured__heading {
   font-size: 35px;
   font-weight: bolder;
 }
-.Featured__heading__span{
+.Featured__heading__span {
   display: flex;
   margin-top: 1em;
-  
 }
-.Featured__span{
+.Featured__span {
   margin-top: 5px;
   margin-right: 1em;
 }
-.Featured__card{
+.Featured__card {
   position: relative;
   width: 20%;
 }
-.Featured__card__date{
+.Featured__card__date {
   font-size: 13px;
   color: #ffff;
   position: absolute;
   top: 2%;
   margin-left: 10px;
-
 }
-.Featured__card__heading{
+.Featured__card__heading {
   font-size: 20px;
   color: #ffff;
   position: absolute;
@@ -345,42 +345,40 @@ All__MAin__Section{
   font-weight: bolder;
   margin-left: 10px;
 }
-.Featured__card__price{
+.Featured__card__price {
   font-size: 13px;
   color: #ffff;
   position: absolute;
   top: 90%;
   font-weight: bolder;
   margin-left: 10px;
-
 }
-.all__featured__card{
+.all__featured__card {
   display: flex;
   width: 70%;
   justify-content: space-between;
   margin-top: 1em;
 }
-.featured__img img{
+.featured__img img {
   width: 120%;
   /* height: 380px; */
-} 
-.event__card{
+}
+.event__card {
   display: flex;
 }
-.event_input{
+.event_input {
   /* width: 100%; */
   height: 40px;
   padding-left: 4em;
   margin-top: 1em;
 }
-.event__search{
+.event__search {
   margin-top: 1em;
 }
-.input__event__search__main{
+.input__event__search__main {
   margin-left: 3em;
-
 }
-.event__button__view{
+.event__button__view {
   background-color: #ff502d;
   color: #fff;
   border: none;
@@ -388,15 +386,15 @@ All__MAin__Section{
   margin-top: 1em;
   margin-left: 1em;
 }
-.event__button__submit{
+.event__button__submit {
   background-color: #32353c;
   color: #fff;
   border: none;
   padding: 10px 2em;
   margin-top: 1em;
 }
-.placement__two__heading{
-  background-color: #A8B5FF;
+.placement__two__heading {
+  background-color: #a8b5ff;
   margin-top: 2em;
   padding: 1.5em;
   margin-left: -11em;
@@ -415,12 +413,12 @@ All__MAin__Section{
   /* left: 82%; */
   background: #ff502d;
   z-index: 3;
-border-radius: 30px 0px 0px 30px;
+  border-radius: 30px 0px 0px 30px;
   display: none;
   animation: slider 1s both;
   transition: 300ms ease-in-out;
 }
-.side_nav nav{
+.side_nav nav {
   margin-top: 2em;
 }
 .side_nav ul li {
@@ -432,8 +430,8 @@ border-radius: 30px 0px 0px 30px;
   color: white;
   font-size: 18px;
 }
-.side_nav ul li a:hover{
-  color: #A8B5FF;
+.side_nav ul li a:hover {
+  color: #a8b5ff;
 }
 @keyframes slider {
   from {
@@ -463,72 +461,130 @@ border-radius: 30px 0px 0px 30px;
   margin-top: 5.4em;
   height: 25px;
 }
-.bestkids{
+.bestkids {
   width: 100%;
   margin: 0 auto;
   max-width: 1440px;
   display: flex;
 }
-.best__left{
+.best__left {
   width: 52%;
   margin-left: 2em;
   position: relative;
 }
-.best__right{
+.best__right {
   width: 48%;
 }
-.bestkids__img img{
+.bestkids__img img {
   width: 100%;
 }
-.bestkid__heading{
+.bestkid__heading {
   font-size: 35px;
   font-weight: bold;
   margin-left: 10px;
   position: absolute;
   top: 5%;
   color: #ffff;
-  width: 35%;
+  width: 40%;
 }
-.bestkids__button{
+.bestkids__button {
   background-color: #ff502d;
   padding: 1em 2em;
   border: none;
   font-size: 15px;
   color: white;
   position: absolute;
-  top: 18%;
+  top: 25%;
   margin: 1em;
 }
-.spanline__bestartical{
+.spanline__bestartical {
   margin-left: 2em;
 }
-.best__right{
+.span__and__Artical__heading {
   display: flex;
-  
 }
 
-.bestartical_heading{
+.bestartical_heading {
   font-size: 30px;
   margin-left: 1em;
   color: #32353c;
-
+}
+.artical_imgs__all {
+  display: flex;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+.artical__con {
+  position: relative;
+  width: 30%;
+}
+.artical__img img {
+  width: 95%;
+  margin-left: 1em;
+}
+.artical__heading {
+  position: absolute;
+  top: 60%;
+  margin-left: 1em;
+  font-size: 12px;
+  color: #fff;
+  align-items: center;
+  text-align: center;
+  font-weight: bold;
+}
+.doha__img {
+  display: flex;
+}
+.doha__heading__links {
+  display: inline;
+}
+.dohabook__link__imgs__all {
+  display: flex;
 }
 
-@media(max-width:1360px){
-  .nav__main{
+.doha__img img {
+  width: 45%;
+  margin-left: 2em;
+}
+.dohabook__heading {
+  font-size: 35px;
+  width: 10%;
+  font-weight: bolder;
+  margin-left: 0.8em;
+  color: #32353c;
+  margin-bottom: 1em;
+}
+.dohabook__link {
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.dohabook__link a {
+  margin-left: 2em;
+  text-decoration: none;
+  font-size: 15px;
+  color: #7b8591;
+}
+.dohabook__link a:hover {
+  color: #ff502d;
+}
+.dohabook__linkimg img {
+  width: 80%;
+  margin-top: 2em;
+  margin-left: 0.5em;
+}
+@media (max-width: 1360px) {
+  .nav__main {
     display: none;
   }
-  .navbar__social__media{
+  .navbar__social__media {
     display: none;
   }
-  .menu_btn{
+  .menu_btn {
     display: flex;
-    
   }
-  
 }
-@media(max-width:1250px){
-
+@media (max-width: 1250px) {
   .header__heading {
     width: 25%;
   }
@@ -537,144 +593,156 @@ border-radius: 30px 0px 0px 30px;
     height: 300px;
     object-fit: cover;
     position: relative;
+  }
+  .placement {
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+  }
+  .placement__img__heading {
+    left: 53%;
+  }
+  .placement__left {
+    width: 97%;
+  }
+  .all__featured__card {
+    width: 97%;
+  }
+  .event__card {
+    flex-wrap: wrap;
+  }
+  .input__event__search__main {
+    margin-left: 0;
+  }
+  .placement__right {
+    width: 50%;
+  }
+  .placement__two__heading {
+    margin-left: 0em;
+  }
+  .placement__button {
+    margin-right: 8.5em;
+  }
+  .bestkids {
+    flex-wrap: wrap;
+  }
+  .bestkid__heading {
+    width: 27%;
+  }
+  .best__left {
+    width: 90%;
+  }
+  .best__right {
+    width: 95%;
+  }
+  .artical__heading {
+    top: 50%;
+    margin-left: 2em;
+    font-size: 17px;
+  }
 }
-.placement{
-  /* flex-direction: column; */
-  flex-wrap: wrap;
-}
-.placement__img__heading{
-  left: 53%;
-}
-.placement__left {
-  width: 97%;
-}
-.all__featured__card {
-  width: 97%;
-}
-.event__card{
-  flex-wrap: wrap;
-}
-.input__event__search__main{
-  margin-left: 0;
-}
-.placement__right{
-  width: 50%;
-}
-.placement__two__heading{
-  margin-left: 0em;
-}
-.placement__button {
-  margin-right: 8.5em;
-}
-}
-@media(max-width:1000px){
-
+@media (max-width: 1000px) {
   .header__heading {
     width: 26%;
     top: 20%;
     margin-left: 1em;
   }
-  .header__button{
+  .header__button {
     margin-left: 2em;
-    
   }
-  
-  .card__main{
+
+  .card__main {
     flex-direction: column;
     flex-wrap: wrap;
     width: 44%;
     margin: 1em;
   }
 }
-@media(max-width:850px){
-
+@media (max-width: 850px) {
   .header__heading {
     width: 26%;
     top: 20%;
     font-size: 24px;
     margin-left: 1.5em;
   }
-  .header__button{
+  .header__button {
     margin-left: 2em;
     top: 55%;
     padding: 1em 3em;
-    
   }
 }
-@media(max-width:850px){
+@media (max-width: 850px) {
   .header__img img {
-
-    height: 350px; 
+    height: 350px;
+  }
+  .card__all {
+    display: flex;
+    width: 95%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .card__heading {
+    top: 37%;
+    margin-left: 10px;
+  }
+  .card__tips {
+    top: 90%;
+  }
+  .card__tips a {
+    margin-left: 10px;
+  }
+  .card__info {
+    margin-left: 10px;
+  }
+  .card__Section__span {
+    display: none;
+  }
+  .Featured__span {
+    display: none;
+  }
+  .card__Section__heading {
+    margin-left: 1em;
+  }
 }
-.card__all {
-  display: flex;
-  width: 95%;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.card__heading{
-  top: 37%;
-  margin-left: 10px;
-}
-.card__tips{
-  top: 90%;
-}
-.card__tips a{
-  margin-left: 10px;
-}
-.card__info{
-  margin-left: 10px;
-}
-.card__Section__span{
-  display: none;
-}
-.Featured__span{
-  display: none;
-}
-.card__Section__heading{
-  margin-left: 1em;
-}
-}
-@media(max-width:750px){
-  .all__featured__card{
+@media (max-width: 750px) {
+  .all__featured__card {
     flex-direction: column;
     margin: 1em;
   }
-  .Featured__card{
+  .Featured__card {
     margin-bottom: 1em;
   }
   .event__card {
     margin-left: 1em;
   }
-  .Featured__heading{
+  .Featured__heading {
     margin-left: 1em;
   }
-  .event__search{
+  .event__search {
     margin-left: 1em;
   }
-  .event_input{
+  .event_input {
     margin-left: 1em;
   }
-  .event__button__view{
+  .event__button__view {
     margin-left: 2em;
   }
   .placement__right {
     margin: 2em;
   }
-  .newscard__info{
-    width: 150%;
+  .newscard__info {
+    width: 125%;
   }
   .more__new__button {
     margin-left: 4em;
   }
-  .placement__two{
+  .placement__two {
     width: 100%;
   }
-  .placement__two__heading{
+  .placement__two__heading {
     padding: 0.5em;
     margin-left: 1em;
   }
-  .featured__img img{
+  .featured__img img {
     width: auto;
     height: 500px;
   }
@@ -684,49 +752,96 @@ border-radius: 30px 0px 0px 30px;
   .Featured__card__heading {
     top: 70%;
   }
-.placement__img__heading {
-  font-size: 28px;
-  left: 3%;
+  .placement__img__heading {
+    font-size: 28px;
+    left: 3%;
     width: 40%;
-  /* left: 50%; */
-}
+    /* left: 50%; */
+  }
+  .artical__heading {
+    font-size: 13px;
+  }
 
-.placement__button {
-  right: 1%;
-  padding: 1em 2em;
-  top: 70%;
+  .placement__button {
+    right: 1%;
+    padding: 1em 2em;
+    top: 70%;
+  }
+  .placement__img img {
+    height: 300px;
+  }
+  .bestkid__heading {
+    width: 35%;
+  }
+  .bestkids__button {
+    top: 35%;
+  }
 }
-.placement__img img{
-  height: 300px;
-  
-}
-}
-@media(max-width:550px){
+@media (max-width: 550px) {
   .card__img img {
     height: 180px;
     width: 100%;
     width: 300px;
-
-}}
-@media(max-width:450px){
+  }
+  .bestkid__heading {
+    font-size: 22px;
+    width: 48%;
+  }
+  .bestkids__button {
+    margin: 8px;
+    padding: 0.6em 1em;
+    top: 29%;
+  }
+  .bestkids__img img {
+    width: 95%;
+  }
+  .spanline__bestartical {
+    display: none;
+  }
+  .artical_imgs__all {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .artical__con {
+    position: relative;
+    width: 50%;
+    margin-bottom: 1em;
+  }
+  .doha__img {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .doha__img img {
+    margin-bottom: 2em;
+  }
+}
+@media (max-width: 450px) {
   .header__img img {
-
     height: 250px;
- 
-}
-.header__heading{
-  font-size: 18px;
-  width: 30%;
-}
-.header__button {
- 
-  padding: 1em 2em;
-}
-.placement__button {
-  top: 80%;
-}
-.placement__img__heading{
-  top: 60%;
-  width: 80%;
-}
+  }
+  .header__heading {
+    font-size: 18px;
+    width: 30%;
+  }
+  .header__button {
+    padding: 1em 2em;
+  }
+  .placement__button {
+    top: 80%;
+  }
+  .placement__img__heading {
+    top: 60%;
+    width: 80%;
+  }
+  .doha__heading__links {
+    margin-left: 3.5em;
+  }
+  .dohabook__heading {
+    margin-left: 1.5em;
+  }
+  .dohabook__link {
+    margin-left: 2.3em;
+  }
 }
